# Sunmark-AI-Chatbot

./: .env.example  .gitignore  README.md  database.py  main.py  package.json  pyproject.toml  rag_pipeline.py  raw_data.json  requirements.txt  scraping.py  test.py  vercel.json
api/: database.py  main.py  rag_pipeline.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/types/: index.ts
